# rhythm-engine

./: Cargo.toml  README.md  THIRD_PARTY_LICENCES  THIRD_PARTY_LICENSES  about.toml  license.html  rustfmt.toml  todo
src/: automation.rs  bounds.rs  core.rs  editor.rs  engine.rs  foundation.rs  hit.rs  lib.rs  main.rs  play.rs  resources.rs  shader.wgsl  sheet.rs  sheets.rs  spline.rs  traits.rs  utils.rs
src/audio/: mod.rs
src/automation/: anchor.rs  automation.rs  bound_sequence.rs  bounded_curve.rs  complex_spline.rs  dyn_color.rs  hit_response.rs  mod.rs  repeater.rs  segment.rs  sequence.rs  spline.rs  transform_point.rs
src/core/: automation.rs  complex_spline.rs  curves.rs  poly_entity.rs
src/editor/: clouds.rs  editor.rs  mod.rs  playlist.rs  realestate.rs
src/engine/: polygon.rs  renderer.rs
src/engine/shaders/: shader.wgsl
src/foundation/: automation.rs  chart.rs  complex_spline.rs  curves.rs  poly_entity.rs
src/foundation/automation/: anchor.rs  automation.rs  complex_spline.rs  dyn_color.rs  grab.rs  nudge.rs  point_transform.rs  segment.rs  transform_point.rs
src/foundation/chart/: channel.rs  chart.rs  playlist.rs
src/foundation/complex_spline/: complex_spline.rs  curve_chain.rs  curves.rs  (+2 more)
src/harmonizer/: arranger.rs  mod.rs  repeater.rs
src/play/: chart.rs  poly_entity.rs
src/poly_entity/: mod.rs
src/serialization/: mod.rs
src/sheet/: automation.rs  bound_sequence.rs  repeater.rs  sequence.rs  spline.rs
src/sheets/: automation.rs  bound_sequence.rs  repeater.rs
src/silhouettes/: mod.rs
src/timing/: mod.rs
src/traits/: from_end.rs  seekable.rs
src/utils/: entropic_builder.rs  from_end.rs  math.rs  misc.rs  misc_math.rs  misc_traits.rs  seeker.rs  unord_maker.rs
(+6 files in other folders)
