[package]
resolver = "2"
name = "rhythm-engine"
version = "0.1.0"
authors = ["iiYese iiyese@outlook.com"]
edition = "2021"

[dev-dependencies]
test-case = "2.2.1"
pretty_assertions = "1.2.1"

[dependencies]
derive_more = "0.99.17"
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_system_graph = "0.4.0"
bevy_egui = "0.17.1"
leafwing-input-manager = "0.7"
iyes_loopless = "0.8"
noisy_float = "0.2.0"
tinyvec = "1.5.1"
itertools = "0.10.5"
lyon_geom = "1.0.3"
tap = "1.0.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

