[package]
resolver = "2"
name = "rhythm-engine"
version = "0.1.0"
authors = ["iiYese iiyese@outlook.com"]
edition = "2021"

[dev-dependencies]
test-case = "2.2.1"
pretty_assertions = "1.2.1"

[dependencies]
bevy_screen_diagnostics = "0.2"
derive_more = "0.99.17"
educe = "0.4.20"
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_kira_audio = "0.15"
bevy_egui = "0.20"
noisy_float = "0.2.0"
tinyvec = "1.5.1"
itertools = "0.10.5"
lyon = "1.0.1"
tap = "1.0.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

